# BR2-vision-based-smoothing

./: .gitignore  LICENSE  Makefile  README.md  br2_vision.ini  calibration_error.py  config.py  dlt.py  overlay_smoothing.py  process_dlt.py  pyproject.toml  requirements.txt  run_calibration.py  run_select_calibration_points.py  run_smoothing.py  visualize_smoothing.py
algorithms/: algorithm.py  rod_tools.py  smoothing_algorithm.py
algorithms/frames/: frame_data.py  frame_rod.py
br2_vision/: dlt.py  manual_tracing.py  naming.py  optical_flow.py  undistort.py
br2_vision/algorithms/: __init__.py  algorithm.py  frame_tools.py  rod_tools.py  smoothing_algorithm.py
br2_vision/algorithms/frames/: __init__.py  frame.py  frame_data.py  frame_rod.py
br2_vision/cv2_custom/: extract_info.py  marking.py  select.py  select_region.py  transformation.py
br2_vision/data/: README.md  io_utils.py  marker_positions.py  tracking_data.py
br2_vision/data/tests/: test_marker_position_structure.py
br2_vision/data_structure/: __init__.py  io_utils.py  marker_positions.py  origin_data.py  posture_data.py  smoothing_data.py  tracking_data.py  utils.py
br2_vision/data_structure/tests/: test_flowqueue.py  test_marker_position_structure.py  test_queue_invariant.py  test_tracking_data.py  test_yaml_io_mixin.py
br2_vision/interactive/: README.md  app.py  sidebar.py
br2_vision/io/: marker_positions.py
br2_vision/qt_custom/: label_prompt.py
br2_vision/tests/: test_optical_flow.py
br2_vision/utility/: __init__.py  convert_coordinate.py  load_config.py  logging.py  test_load_config.py
br2_vision_cli/: add_initial_flow_point.py  add_origin.py  bend_curv.py  calibration_error.py  cutout_trajectory.py  extract_frames_from_video.py  h5_remove_dataset.py  interactive_cutout_trajectory.py  manual_tracking.py  overlay_smoothing.py  process_dlt.py  render_video.py  run_optical_flow.py  run_select_calibration_points.py  run_smoothing.py  sync_video.py  tip_twist_angle.py  trim_video_intervals_by_led.py  trim_video_intervals_manual.py  visualize_smoothing.py
cv2_custom/: marking.py  transformation.py
distortion_calibration/: README.md  calibrate_grey.py
preprocessing_tools/: trim_video_intervals_by_led.py  undistort_rotate.py  undistort_rotate_calibrations.py  undistort_rotate_frames.py  undistort_rotate_video.py
script/: README.md  add_initial_flow_point.py  bend_curv.py  calibration_error.py  crop_video.py  cutout_trajectory.py  data_augment_cross_section.py  distortion_calibration.py  dlt_calibration.py  extract_frames_from_video.py  interactive_cutout_trajectory.py  overlay_cross_section_info.py  overlay_framemark.py  overlay_smoothing.py  process_dlt.py  run_calibration.py  run_optical_flow.py  run_select_calibration_points.py  run_smoothing.py  sync_video.py  trim_video_intervals_by_led.py  trim_video_intervals_manual.py  undistort.py  undistort_rotate_frames.py  undistort_rotate_video.py  visualize_smoothing.py
template/: br2_vision.ini  markers.yaml
tests/: conftest.py  test_optical_flow_point_selection_and_removal.py
tests/scripts/: conftest.py  test_run_optical_flow.py
undistort_tools/: undistort.py
video_preprocessing/: trim_video_intervals.py
